# ImageDetection

./: .gitignore  CMakeLists.txt  main.cpp
src/: Main.cpp  main.cpp
